--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
