--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-animated-numbers": "^1.0.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
